// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Returns pixel values 1`] = `
Object {
  "lineHeight": "18px",
}
`;

exports[`Returns responsive values 1`] = `
Object {
  "@media screen and (min-width: 40em)": Object {
    "lineHeight": "20px",
  },
  "lineHeight": "18px",
}
`;

exports[`Returns string values 1`] = `
Object {
  "lineHeight": "3em",
}
`;
